Iconos en el menu

--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -14,6 +14,8 @@
     <link href="../css/menuInicio.css" rel="stylesheet">
     <script src="../js/menuIndex.js" defer></script>
     <script src="../js/footerIndex.js" defer></script>
+    <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" > </script> 
+  <script  nomodule  src = "https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js" > </script>
     <title>Vuelos Semanales | Aerolínea</title>
 </head>
 
@@ -46,25 +48,25 @@
                     </li>
                     <li>
                         <a href="vuelosemanales.html">
-                            <ion-icon name="restaurant-outline"></ion-icon>
+                            <ion-icon name="airplane-outline"></ion-icon>
                             <span>Vuelos Diarios</span>
                         </a>
                     </li>
                     <li>
                         <a href="reservas.html">
-                            <ion-icon name="bookmarks-outline"></ion-icon>
+                            <ion-icon name="clipboard-outline"></ion-icon>
                             <span>Reservas</span>
                         </a>
                     </li>
                     <li>
                         <a href="misreservas.html">
-                            <ion-icon name="people-circle-outline"></ion-icon>
+                            <ion-icon name="person-circle-outline"></ion-icon>
                             <span>Mis reservas</span>
                         </a>
                     </li>
                     <li>
                         <a href="sobreNosotros.html">
-                            <ion-icon name="chatbubbles-outline"></ion-icon>
+                            <ion-icon name="people-circle-outline"></ion-icon>
                             <span>Sobre nosotros</span>
                         </a>
                     </li>
