--- a/Aerolínea/index.html
+++ b/Aerolínea/index.html
@@ -7,12 +7,12 @@
   <link rel="icon" type="image/x-icon" href="img/iconaero.png">
   <link href="bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="sweetalert2.min.css">
   <link href="css/indexEstilo.css" rel="stylesheet">
   <link href="css/menu.css" rel="stylesheet">
   <link href="css/menuInicio.css" rel="stylesheet">
-  <script src="js/menuIndex.js" defer></script>
   <script src="js/footerIndex.js" defer></script>
+  <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" > </script> 
+  <script  nomodule  src = "https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js" > </script>
   <title>Inicio | Aerolínea</title>
 </head>
 <body>
@@ -36,25 +36,25 @@
           <ul>
               <li>
                   <a id="inbox" href="Inicio.html">
-                      <ion-icon name="home-outline"></ion-icon>
+                    <ion-icon name="home-outline"></ion-icon>
                       <span>Inicio</span>
                   </a>
               </li>
               <li>
                   <a href="Pages/vuelosemanales.html">
-                      <ion-icon name="restaurant-outline"></ion-icon>
+                    <ion-icon name="airplane-outline"></ion-icon>
                       <span>Vuelos Diarios</span>
                   </a>
               </li>
               <li>
                   <a href="Pages/reservas.html">
-                      <ion-icon name="bookmarks-outline"></ion-icon>
+                    <ion-icon name="clipboard-outline"></ion-icon>
                       <span>Reservas</span>
                   </a>
               </li>
               <li>
                   <a href="Pages/misreservas.html">
-                      <ion-icon name="people-circle-outline"></ion-icon>
+                    <ion-icon name="person-circle-outline"></ion-icon>
                       <span>Mis reservas</span>
                   </a>
               </li>
