--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -37,50 +37,50 @@
 
 
 
-        <nav class="navegacion">
-            <ul>
-                <li>
-                    <a id="inbox" href="../index.html">
-                        <ion-icon name="home-outline"></ion-icon>
-                        <span>Inicio</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="vuelosemanales.html">
-                        <ion-icon name="restaurant-outline"></ion-icon>
-                        <span>Vuelos Diarios</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="reservas.html">
-                        <ion-icon name="bookmarks-outline"></ion-icon>
-                        <span>Reservas</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="misreservas.html">
-                        <ion-icon name="people-circle-outline"></ion-icon>
-                        <span>Mis reservas</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="sobreNosotros.html">
-                        <ion-icon name="chatbubbles-outline"></ion-icon>
-                        <span>Sobre nosotros</span>
-                    </a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-  
-                </li>
-            </ul>
-        </nav>
+           <nav class="navegacion">
+          <ul>
+              <li>
+                  <a id="inbox" href="../index.html">
+                      <ion-icon name="home-outline"></ion-icon>
+                      <span>Inicio</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="vuelosemanales.html">
+                      <ion-icon name="restaurant-outline"></ion-icon>
+                      <span>Vuelos Diarios</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="reservas.html">
+                      <ion-icon name="bookmarks-outline"></ion-icon>
+                      <span>Reservas</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="misreservas.html">
+                      <ion-icon name="people-circle-outline"></ion-icon>
+                      <span>Mis reservas</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="sobreNosotros.html">
+                      <ion-icon name="chatbubbles-outline"></ion-icon>
+                      <span>Sobre nosotros</span>
+                  </a>
+              </li>
+          </ul>
+          <ul>
+              <li>
+
+              </li>
+          </ul>
+      </nav>
 
             <div class="linea"></div>
             <br>
         </div>
-
+    <div class="container"> 
         <div class="cont7 container-fluid">
             <div class="imge">
                 <img src="../img/sobrenosotros1.jpg" ; class="imagen">
@@ -115,9 +115,73 @@
             </div>
         </div>
 
+        <br> <br>
+
+        <div class="row">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Misión</h5>
+                  <p class="card-text">Facilitar conexiones significativas alrededor del mundo, brindando a nuestros pasajeros 
+                    experiencias de viaje inolvidables y seguras. Ya sea que estén volando por negocios o por placer, 
+                    nos esforzamos por superar las expectativas de cada uno de nuestros clientes en cada etapa de su viaje.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Visión</h5>
+                  <p class="card-text">Ser la elección preferida de viaje para los viajeros de todo el mundo, ofreciendo conexiones sin límites y experiencias de viaje 
+                    inolvidables que enriquezcan la vida de nuestros pasajeros y fortalezcan los lazos que unen a la humanidad.</p>
+                </div>
+              </div>
+            </div>
+</div>
+<br><br>
+
+<div class="container text-center">
+    <div class="row row-cols-12">
+<div class="col">
+
+    <h2>
+        Redes sociales
+    </h2>
+    <br><br>
+</div>
+</div>
+</div>
+<div class="container text-center">
+    <div class="row row-cols-12">
+
+        <div class="col-sm-4">
+
+            <a href="https://instagram.com/cc_15s?igshid=OGQ5ZDc2ODk2ZA==">
+                <img class="imagen2" src="../img/instagram.png" width="40">
+            </a>
+            <a href="https://instagram.com/cc_15s?igshid=OGQ5ZDc2ODk2ZA==">
+            </a>
+
+        </div>
+        <div class="col-sm-4">
+            <a href="https://www.facebook.com/emilynicole.jacobocampos?mibextid=9R9pXO">
+                <img class="imagen2" src="../img/facebook.png" width="40">
+            </a>
+            <a href="https://www.facebook.com/emilynicole.jacobocampos?mibextid=9R9pXO">
+            </a>
+        </div>
+        <div class="col-sm-4">
+            <a href="https://wa.me/72089786">
+                <img class="imagen2" src="../img/whatsapp.png" width="40">
+            </a>
+
+        </div>
     </div>
-    </div>
-    
+</div>
+
+</div>
+</div>
+
 
     <br>
     <div class="container text-center">
