--- a/Aerolínea/index.html
+++ b/Aerolínea/index.html
@@ -15,67 +15,68 @@
   <script src="js/footerIndex.js" defer></script>
   <title>Inicio | Aerolínea</title>
 </head>
+
 <body>
   <div id="division">
     <div class="menu">
       <ion-icon name="menu-outline"></ion-icon>
       <ion-icon name="close-outline"></ion-icon>
-  </div>
+    </div>
 
-  <div class="barra-lateral">
+    <div class="barra-lateral">
       <div>
-          <div class="nombre-pagina">
-              <div class="usuario">
-                  <img src="img/iconaero.png" alt="">
-                  <span>SkyWings</span>
-              </div>
+        <div class="nombre-pagina">
+          <div class="usuario">
+            <img src="img/iconaero.png" alt="">
+            <span>SkyWings</span>
           </div>
+        </div>
       </div>
 
       <nav class="navegacion">
-          <ul>
-              <li>
-                  <a id="inbox" href="Inicio.html">
-                      <ion-icon name="home-outline"></ion-icon>
-                      <span>Inicio</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="Pages/vuelosemanales.html">
-                      <ion-icon name="restaurant-outline"></ion-icon>
-                      <span>Vuelos Diarios</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="Pages/reservas.html">
-                      <ion-icon name="bookmarks-outline"></ion-icon>
-                      <span>Reservas</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="Pages/misreservas.html">
-                      <ion-icon name="people-circle-outline"></ion-icon>
-                      <span>Mis reservas</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="Pages/sobreNosotros.html">
-                      <ion-icon name="chatbubbles-outline"></ion-icon>
-                      <span>Sobre nosotros</span>
-                  </a>
-              </li>
-          </ul>
-          <ul>
-              <li>
+        <ul>
+          <li>
+            <a id="inbox" href="Inicio.html">
+              <ion-icon name="home-outline"></ion-icon>
+              <span>Inicio</span>
+            </a>
+          </li>
+          <li>
+            <a href="Pages/vuelosemanales.html">
+              <ion-icon name="restaurant-outline"></ion-icon>
+              <span>Vuelos Diarios</span>
+            </a>
+          </li>
+          <li>
+            <a href="Pages/reservas.html">
+              <ion-icon name="bookmarks-outline"></ion-icon>
+              <span>Reservas</span>
+            </a>
+          </li>
+          <li>
+            <a href="Pages/misreservas.html">
+              <ion-icon name="people-circle-outline"></ion-icon>
+              <span>Mis reservas</span>
+            </a>
+          </li>
+          <li>
+            <a href="Pages/sobreNosotros.html">
+              <ion-icon name="chatbubbles-outline"></ion-icon>
+              <span>Sobre nosotros</span>
+            </a>
+          </li>
+        </ul>
+        <ul>
+          <li>
 
-              </li>
-          </ul>
+          </li>
+        </ul>
       </nav>
-      
+
       <div class="linea"></div>
       <br>
-      
-  </div>
+
+    </div>
 
     <main>
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -114,9 +115,13 @@
         <p class="info">
           <b>Vive nuevas experiencias con nosotros</b>
         </p>
-        <p class="info1">Prepárate para vivir la experiencia SkyWings Airlines. Explora nuestro sitio web para conocer nuestras ofertas especiales, planificar tu próximo viaje y sumergirte en el mundo de la aviación con estilo. ¡Eleva tus expectativas y vuela alto con SkyWings Airlines hoy mismo!</p>
+        <p class="info1">Prepárate para vivir la experiencia SkyWings Airlines. Explora nuestro sitio web para conocer
+          nuestras ofertas especiales, planificar tu próximo viaje y sumergirte en el mundo de la aviación con estilo.
+          ¡Eleva tus expectativas y vuela alto con SkyWings Airlines hoy mismo!</p>
 
-        <p class="info11">¡Descubre la magia de volar con SkyWings Airlines, donde la excelencia y la comodidad se unen para brindarte experiencias de viaje inolvidables! Nuestra aerolínea está dedicada a ofrecer un servicio de calidad que va más allá de las expectativas, elevando cada vuelo a una experiencia única.</p>
+        <p class="info11">¡Descubre la magia de volar con SkyWings Airlines, donde la excelencia y la comodidad se unen
+          para brindarte experiencias de viaje inolvidables! Nuestra aerolínea está dedicada a ofrecer un servicio de
+          calidad que va más allá de las expectativas, elevando cada vuelo a una experiencia única.</p>
       </div>
       <br>
 
@@ -133,7 +138,8 @@
 
           <div class="col col1">
             <br>
-            <p>Han demostrado ser una elección sólida para mis viajes de negocios. Los horarios son convenientes y el Wi-Fi a bordo es rápido.</p>
+            <p>Han demostrado ser una elección sólida para mis viajes de negocios. Los horarios son convenientes y el
+              Wi-Fi a bordo es rápido.</p>
             <br>
             <br>
             <img class="perfil2" src="img/perfil1.png" alt="">
@@ -142,7 +148,8 @@
 
           <div class="col col1">
             <br>
-            <p>¡Una experiencia inolvidable! Mi vuelo fue emocionante. Las vistas desde las ventanas eran asombrosas.</p>
+            <p>¡Una experiencia inolvidable! Mi vuelo fue emocionante. Las vistas desde las ventanas eran asombrosas.
+            </p>
             <br>
             <br>
             <img class="perfil2" src="img/perfil2.png" alt="">
@@ -151,7 +158,8 @@
 
           <div class="col col1">
             <br>
-            <p>Se han convertido en mi elección predilecta. La puntualidad es impecable, los vuelos son suaves y la comida a bordo es deliciosa.</p>
+            <p>Se han convertido en mi elección predilecta. La puntualidad es impecable, los vuelos son suaves y la
+              comida a bordo es deliciosa.</p>
             <br>
             <br>
             <img class="perfil2" src="img/perfil3.png" alt="">
@@ -165,7 +173,7 @@
   </div>
   </main>
   </div>
-  
+
   <div id="footerContenedor"></div>
 
   <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
