--- a/Aerolínea/pages/vuelosemanales.html
+++ b/Aerolínea/pages/vuelosemanales.html
@@ -2,88 +2,125 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="../img/iconaero.png">
-  <link href="bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="sweetalert2.min.css">
-  <link href="../css/indexEstilo.css" rel="stylesheet">
-  <link href="../css/menu.css" rel="stylesheet">
-  <link href="../css/menuInicio.css" rel="stylesheet">
-  <script src="../js/menuIndex.js" defer></script>
-  <script src="../js/footerIndex.js" defer></script>
-  <title>Vuelos Semanales | Aerolínea</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../img/iconaero.png">
+    <link href="bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="sweetalert2.min.css">
+    <link href="../css/indexEstilo.css" rel="stylesheet">
+    <link href="../css/menu.css" rel="stylesheet">
+    <link href="../css/menuInicio.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/vuelosdiarios.css">
+    <script src="../js/menuIndex.js" defer></script>
+    <script src="../js/footerIndex.js" defer></script>
+    <title>Vuelos Semanales | Aerolínea</title>
 </head>
+
 <body>
-  <div id="division">
-    <div class="menu">
-      <ion-icon name="menu-outline"></ion-icon>
-      <ion-icon name="close-outline"></ion-icon>
-  </div>
+    <div id="division">
+        <div class="menu">
+            <ion-icon name="menu-outline"></ion-icon>
+            <ion-icon name="close-outline"></ion-icon>
+        </div>
 
-  <div class="barra-lateral">
-      <div>
-          <div class="nombre-pagina">
-              <div class="usuario">
-                  <img src="../img/iconaero.png" alt="">
-                  <span>Aerolínea</span>
-              </div>
-          </div>
-      </div>
+        <div class="barra-lateral">
+            <div>
+                <div class="nombre-pagina">
+                    <div class="usuario">
+                        <img src="../img/iconaero.png" alt="">
+                        <span>Aerolínea</span>
+                    </div>
+                </div>
+            </div>
 
-      <nav class="navegacion">
-          <ul>
-              <li>
-                  <a id="inbox" href="../index.html">
-                      <ion-icon name="home-outline"></ion-icon>
-                      <span>Inicio</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="vuelosemanales.html">
-                      <ion-icon name="restaurant-outline"></ion-icon>
-                      <span>Vuelos Diarios</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="reservas.html">
-                      <ion-icon name="bookmarks-outline"></ion-icon>
-                      <span>Reservas</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="misreservas.html">
-                      <ion-icon name="people-circle-outline"></ion-icon>
-                      <span>Mis reservas</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="sobreNosotros.html">
-                      <ion-icon name="chatbubbles-outline"></ion-icon>
-                      <span>Sobre nosotros</span>
-                  </a>
-              </li>
-          </ul>
-          <ul>
-              <li>
+            <nav class="navegacion">
+                <ul>
+                    <li>
+                        <a id="inbox" href="../index.html">
+                            <ion-icon name="home-outline"></ion-icon>
+                            <span>Inicio</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="vuelosemanales.html">
+                            <ion-icon name="restaurant-outline"></ion-icon>
+                            <span>Vuelos Diarios</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="reservas.html">
+                            <ion-icon name="bookmarks-outline"></ion-icon>
+                            <span>Reservas</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="misreservas.html">
+                            <ion-icon name="people-circle-outline"></ion-icon>
+                            <span>Mis reservas</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="sobreNosotros.html">
+                            <ion-icon name="chatbubbles-outline"></ion-icon>
+                            <span>Sobre nosotros</span>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
 
-              </li>
-          </ul>
-      </nav>
-      
-      <div class="linea"></div>
-      <br>
-      
-  </div>
+                    </li>
+                </ul>
+            </nav>
 
-  <div id="footerContenedor"></div>
+            <div class="linea"></div>
+            <br>
 
-  <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/cargarMenuIndex.js"></script>
-  <script src="js/cargarFooterIndex.js"></script>
-  <script src="js/index.js"></script>
+        </div>
+
+
+    </div>
+    <main>
+        <header id="cabezeravuelossemanales">
+            <h2>Vuelos Semanales</h2>
+            <h4>Llegadas y salidas</h4>
+        </header>
+        <br>
+        <br>
+        <br>
+        <section>
+            <article>
+                <h3>Llegadas</h3>
+                <br>
+                <span>Busqueda rapida</span>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </article>
+            <br>
+            <div id="contenedordeinline">
+<div id="globouno"><div>Avianca</div><div>AV671</div></div>
+<div id="globodos"><h6>10:00</h6><div id="letrarr">Nueva York John F Kennedy</div></div>
+<div id="globotres"><div id="letrabo">En la puerta</div><div id="ter">Terminal-</div></div>
+
+            </div>
+            <article>
+
+            </article>
+
+        </section>
+    </main>
+
+
+    <div id="footerContenedor"></div>
+
+    <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/cargarMenuIndex.js"></script>
+    <script src="js/cargarFooterIndex.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
