--- a/Aerolínea/pages/vuelosemanales.html
+++ b/Aerolínea/pages/vuelosemanales.html
@@ -2,21 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="../img/iconaero.png">
-  <link href="bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="sweetalert2.min.css">
-  <link href="../css/indexEstilo.css" rel="stylesheet">
-  <link href="../css/menu.css" rel="stylesheet">
-  <link href="../css/menuInicio.css" rel="stylesheet">
-  <link rel="stylesheet" href="../css/vuelosdiarios.css">
-  <script src="../js/menuIndex.js" defer></script>
-  <script src="../js/footerIndex.js" defer></script>
-  <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" > </script> 
-  <script  nomodule  src = "https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js" > </script>
-  <title>Vuelos Semanales | Aerolínea</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../img/iconaero.png">
+    <link href="bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="sweetalert2.min.css">
+    <link href="../css/indexEstilo.css" rel="stylesheet">
+    <link href="../css/menu.css" rel="stylesheet">
+    <link href="../css/menuInicio.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/vuelosdiarios.css">
+    <script src="../js/menuIndex.js" defer></script>
+    <script src="../js/footerIndex.js" defer></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"> </script>
+    <script nomodule src="https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"> </script>
+    <title>Vuelos Semanales | Aerolínea</title>
 </head>
 
 <body>
@@ -36,41 +36,41 @@
                 </div>
             </div>
 
-      <nav class="navegacion">
-          <ul>
-              <li>
-                  <a id="inbox" href="../index.html">
-                      <ion-icon name="home-outline"></ion-icon>
-                      <span>Inicio</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="vuelosemanales.html">
-                    <ion-icon name="airplane-outline"></ion-icon>
-                      <span>Vuelos Diarios</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="reservas.html">
-                    <ion-icon name="clipboard-outline"></ion-icon>
-                      <span>Reservas</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="misreservas.html">
-                    <ion-icon name="person-circle-outline"></ion-icon>
-                      <span>Mis reservas</span>
-                  </a>
-              </li>
-              <li>
-                  <a href="sobreNosotros.html">
-                    <ion-icon name="people-circle-outline"></ion-icon>
-                      <span>Sobre nosotros</span>
-                  </a>
-              </li>
-          </ul>
-          <ul>
-              <li>
+            <nav class="navegacion">
+                <ul>
+                    <li>
+                        <a id="inbox" href="../index.html">
+                            <ion-icon name="home-outline"></ion-icon>
+                            <span>Inicio</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="vuelosemanales.html">
+                            <ion-icon name="airplane-outline"></ion-icon>
+                            <span>Vuelos Diarios</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="reservas.html">
+                            <ion-icon name="clipboard-outline"></ion-icon>
+                            <span>Reservas</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="misreservas.html">
+                            <ion-icon name="person-circle-outline"></ion-icon>
+                            <span>Mis reservas</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="sobreNosotros.html">
+                            <ion-icon name="people-circle-outline"></ion-icon>
+                            <span>Sobre nosotros</span>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
 
                     </li>
                 </ul>
@@ -103,15 +103,34 @@
             </article>
             <br>
             <div id="contenedordeinline">
-<div id="globouno"><div>Avianca</div><div>AV671</div></div>
-<div id="globodos"><h6>10:00</h6><div id="letrarr">Nueva York John F Kennedy</div></div>
-<div id="globotres"><div id="letrabo">En la puerta</div><div id="ter">Terminal-</div></div>
-
+                <div id="globouno">
+                    <div>Avianca</div>
+                    <div>AV671</div>
+                </div>
+                <div id="globodos">
+                    <h6>10:00</h6>
+                    <div id="letrarr">Nueva York John F Kennedy</div>
+                </div>
+                <div id="globotres">
+                    <div id="letrabo">En la puerta</div>
+                    <div id="ter">Terminal-</div>
+                </div>
             </div>
-            <article>
-
-            </article>
-
+            
+            <div id="contenedordeinline">
+                <div id="globouno">
+                    <div>Copa</div>
+                    <div>CM816</div>
+                </div>
+                <div id="globodos">
+                    <h6>12:47</h6>
+                    <div id="letrarr">Ciudad de Panamá</div>
+                </div>
+                <div id="globotres">
+                    <div id="letrabo">En la puerta</div>
+                    <div id="ter">Terminal-</div>
+                </div>
+            </div>
         </section>
     </main>
 
